--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -15,7 +15,7 @@ padding: 25px 15px;
     cursor: pointer;
 }
 .sidebar .new-chat{
-    margin-top: 10px;
+    margin-top: 50px;
     display: inline-flex;
     align-items: center;
     gap: 10px;
@@ -46,4 +46,12 @@ padding: 25px 15px;
  }
  .sidebar .recent-entry:hover{
     background-color: #e2e6eb;
+ }
+ .sidebar .bottom{
+    display: flex;
+    flex-direction: column;
+ }
+ .sidebar .bottom-items{
+    padding-right: 10px;
+    cursor: pointer;
  }
