--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -163,3 +163,21 @@
     font-weight: 300;
     line-height: 1.8;
 }
+@media screen and (max-width: 600px) {
+    .main-bottom input{
+        flex: none;
+        width: 150px;
+    }
+    .main-bottom img{
+        width: 20px;
+    }
+    .search-box{
+        padding: 5px 10px;
+    }
+    .search-box div{
+        gap: 20px;
+    }
+    .cards{
+        margin-bottom: 15px;
+    }
+}
